# libnav

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/: Alg Diagram.drawio
.github/workflows/: test.yml
Tools/: Readme.md
Tools/vscode_settings/: launch.json  settings.json  tasks.json
include/: analysis_api.h  calib.h  constants.h  input_structure.h  nav_alg.h  nav_cor.h  nav_solution.h  vectors.h
interface/: interface.cpp  interface.h  interface.py
src/: analysis_api.cpp  calib.cpp  gnss_correction.cpp  integ_radial_corr.cpp  nav_alg.cpp  nav_cor.cpp  nav_solution.cpp  radial_corr.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  test.cpp  test_input.cpp  test_solution.cpp
